It does not matter how slowly you go as long as you do not stop.
-- Confucius

First they ignore you, then they laugh at you, then they fight you,
then you win. –- Mahatma Gandhi

Wed, Apr 8, 2009
---------------------------------------------------------------------
- Created Activity model, related table, and factory.
- Basic initial implementation of activity observers and recent activity.

Tue, Apr 7, 2009
---------------------------------------------------------------------
- Added quick reschedule links to [Edit Task].
- Finished with editing tasks.

Mon, Apr 6, 2009
---------------------------------------------------------------------
- Introduced called_from_(index|landing)_page? helpers.
- A couple of bug fixes (hiding [Lead Convert] and handling HTTP :delete).

Sun, Apr 5, 2009
---------------------------------------------------------------------
- More tweaks rescheduling and reassigning tasks.

Sat, Apr 4, 2009
---------------------------------------------------------------------
- Added :before_update hooks for task along with related model specs.
- Renamed [task.due_at_hint] to [task.bucket] to simplify naming conventions.
- Initial implementation of task rescheduling and reassigning.

Fri, Apr 3, 2009
---------------------------------------------------------------------
- Moved [Edit Task] cancellation logic from controller to view.

Thu, Apr 2, 2009
---------------------------------------------------------------------
- Added view specs for task#destroy, fixed a couple task related bugs.
- Refactored view specs.

Wed, Apr 1, 2009
---------------------------------------------------------------------
- Finished [Edit Lead] views and view specs.
- Started with [Edit Task] form and related views.
- Refactored create, edit, and complete task views and created the specs.

Tue, Mar 31, 2009
---------------------------------------------------------------------
- More work on [Edit Lead] views and specs.

Mon, Mar 30, 2009